<?xml version="1.0"?>
<package format="2">
  <name>movement</name>
  <version>0.0.0</version>
  <description>The movement package</description>

  <maintainer email="duynamk63uet@gmail.com">Nam BUI DUY</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rosserial_arduino</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>

  <export></export>
</package>
